# telematic-esp32

./: .env  .gitignore  Cargo.toml  Check_fmt_clippy.bat  Fix_fmt_clippy.bat  README.md  check.bat
.cargo/: config.toml
.github/workflows/: clippy_fmt_check.yml
app/: Cargo.toml  build.rs
app/cert/: dvt.crt  dvt.key
app/src/: main.rs
app/src/cfg/: net_cfg.rs
app/src/hal/flash/: mod.rs
app/src/svc/: mod.rs
app/src/svc/atcmd/: mod.rs  response.rs  urc.rs
app/src/svc/conn_mgr/: mod.rs
app/src/svc/mem/: mod.rs
app/src/svc/mqtt/: mod.rs
app/src/task/: can.rs  lte.rs  mqtt.rs  ota.rs  wifi.rs
app/src/util/: log.rs  mod.rs  no_std_prelude.rs
cert/: crt.pem  dvt.crt  dvt.key
src/: main.rs
src/app/: gps.rs  logger.rs
src/at_command/common/: mod.rs
src/at_command/common/general/: mod.rs  responses.rs
src/cert/: crt.pem  dvt.crt  dvt.key
src/cfg/: mender_cfg.rs  mod.rs  net_cfg.rs
src/esp_nvs/: mod.rs
src/hal/: mod.rs
src/hal/flash/: mod.rs
src/hal/mmu/: crc32.rs  helpers.rs  mmu_hal.rs  mod.rs  structs.rs
src/hal/mmu/mmu_ll/: esp32.rs  esp32c2.rs  esp32c3.rs  esp32c6.rs  esp32h2.rs  esp32s2.rs  esp32s3.rs  mod.rs  not_selected.rs
src/mqtt/: mod.rs
src/quectel/common/general/: mod.rs  responses.rs
src/svc/: mod.rs
src/svc/atcmd/: atcmd.rs  general.rs  mod.rs
src/svc/dns/: builder.rs  mod.rs
src/svc/mem/: mod.rs  nvm.rs
src/svc/mender/: mender_common.rs  mender_prj_config.rs  mod.rs
src/svc/mender/addon/: mender_addon.rs  mod.rs
src/svc/mender/addon/configure/: mender_configure.rs  mender_configure_api.rs  mod.rs
src/svc/mender/addon/inventory/: mender_inventory.rs  mender_inventory_api.rs  mod.rs
src/svc/mender/core/: mender_api.rs  mender_artifact.rs  mender_client.rs  mender_utils.rs  mod.rs
src/svc/mender/platform/: mod.rs
src/svc/mender/platform/flash/: mender_flash.rs  mod.rs
src/svc/mender/platform/net/: mender_http.rs  mender_websocket.rs  mod.rs
src/svc/mender/platform/scheduler/: mender_scheduler.rs  mod.rs
src/svc/mender/platform/storage/: mender_storage.rs  mod.rs
src/svc/mender/platform/tls/: mender_tls.rs  mod.rs
src/svc/mqtt/: mod.rs
src/task/: can.rs  lte.rs  mod.rs  mqtt.rs  ota.rs  wifi.rs
src/tasks/: can_rx.rs  mod.rs  mqtt.rs  quectel.rs  wifi.rs
src/util/: mod.rs  time.rs
tests/: test_flash.rs
tests/intergration/: Cargo.toml
tests/intergration/src/: test_ota.rs
tests/modules/: Cargo.toml  partitions.csv
tests/modules/src/: main.rs
tests/unit/: Cargo.toml  build.rs
