[package]
name = "iot-tracker-rs"
version = "0.1.0"
authors = ["tuemb <nvtu96@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = {version = "0.22.0", features = [ "esp32c6", "log"] }
esp-hal-embassy     = { version = "0.5.0", features = ["esp32c6", "integrated-timers"] }
esp-alloc = { version = "0.5.0" }
embassy-executor    = { version = "0.6.3", features = ["task-arena-size-131072"] }
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time        = "0.3.2"
embassy-sync        = "0.6.1"
esp-println = { version = "0.12.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.11.0", features = ["esp32c6", "wifi"] }
embedded-can        = "0.4.1"
log = { version = "0.4.20" }
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", default-features = false }
atat = {git = "https://github.com/TuEmb/atat.git", rev = "b9b8278d8ce2c71a15a1232ba763087cfb76807f"}
static_cell         = { version = "2.1.0", features = ["nightly"] }
heapless            = "0.8.0"
embedded-io = "0.6.1"
mqttrust = "0.6.0"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
wdg = []
