[package]
name = "telematics-control-unit"
version = "0.1.0"
authors = ["tuemb <nvtu96@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies with ESP32C6 features
esp-backtrace = { version = "0.15.0", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.0", features = ["esp32c6", "log"], optional = true }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"], optional = true }
esp-alloc = { version = "0.6.0" }
esp-storage = { version = "0.4.0", features = ["esp32c6"], optional = true }

# Embassy framework
embassy-executor = { version = "0.7.0", features = ["task-arena-size-131072"] }
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-time = "0.4.0"
embassy-sync = "0.6.1"

# ESP32 specific
esp-println = { version = "0.13.0", features = ["esp32c6", "log"] }
esp-wifi = { version = "0.12.0", features = ["esp32c6", "wifi"] }

# OTA
esp32-mender-client = { git = "https://github.com/virust-ai/esp32-mender-client", branch = "main", features = [
    "esp32c6",
] }

# Other dependencies
embedded-can = "0.4.1"
log = { version = "0.4.16" }
esp-mbedtls = { git = "https://github.com/TuEmb/esp-mbedtls.git", branch = "esp32c6_support", features = [
    "esp32c6",
] }
atat = { git = "https://github.com/TuEmb/atat.git", rev = "67eb38b3b2cdbd1a5f68f536517a8f24d3fcba01" }
static_cell = { version = "2.1.0", features = ["nightly"] }
heapless = "0.8.0"
embedded-io = "0.6.1"
embedded-storage = "0.3.1"
mqttrust = "0.6.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = [
    "dep:esp-hal",
    "dep:esp-storage",
    "dep:esp-hal-embassy",
    "esp-hal/esp32c6",
    "esp-storage/esp32c6",
    "esp-hal-embassy/esp32c6",
]
ota = []
wdg = []
